// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimatedGlitchLogo renders svg component with all props 1`] = `
.c0 {
  padding-top: 4rem;
  padding-right: 4rem;
  padding-bottom: 4rem;
  padding-left: 4rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c2 {
  fill: currentColor;
}

.c3 {
  fill: #a970ff;
}

.c4 {
  fill: #ffffff;
}

.c5 {
  -webkit-animation-duration: 0.2s;
  animation-duration: 0.2s;
  -webkit-animation-iteration-count: 2;
  animation-iteration-count: 2;
  -webkit-animation-name: none;
  animation-name: none;
  -webkit-animation-play-state: paused;
  animation-play-state: paused;
  -webkit-transform-origin: 0% 35%;
  -ms-transform-origin: 0% 35%;
  transform-origin: 0% 35%;
  will-change: transform;
}

<AnimatedGlitchLogo
  height={85}
  padding={4}
  width={57}
>
  <styled.div
    className="tw-animated-glitch-logo"
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    padding={4}
  >
    <div
      className="c0 tw-animated-glitch-logo"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    >
      <styled.figure>
        <figure
          className="c1"
        >
          <styled.svg
            height="85px"
            overflow="visible"
            version="1.1"
            viewBox="0 0 40 40"
            width="57px"
            x="0px"
            y="0px"
          >
            <svg
              className="c2"
              height="85px"
              overflow="visible"
              version="1.1"
              viewBox="0 0 40 40"
              width="57px"
              x="0px"
              y="0px"
            >
              <g>
                <styled.polygon
                  points="13 8 8 13 8 31 14 31 14 36 19 31 23 31 32 22 32 8"
                >
                  <polygon
                    className="c3"
                    points="13 8 8 13 8 31 14 31 14 36 19 31 23 31 32 22 32 8"
                  >
                    <animate
                      attributeName="points"
                      begin="indefinite"
                      calcMode="spline"
                      dur="150ms"
                      fill="freeze"
                      from="13 8 8 13 8 31 14 31 14 36 19 31 23 31 32 22 32 8"
                      keySplines="0.25 0.1 0.25 1"
                      keyTimes="0; 1"
                      to="16 5 8 13 8 31 14 31 14 36 19 31 23 31 35 19 35 5"
                    />
                    <animate
                      attributeName="points"
                      begin="indefinite"
                      calcMode="spline"
                      dur="250ms"
                      fill="freeze"
                      from="16 5 8 13 8 31 14 31 14 36 19 31 23 31 35 19 35 5"
                      keySplines="0.25 0.1 0.25 1"
                      keyTimes="0; 1"
                      to="13 8 8 13 8 31 14 31 14 36 19 31 23 31 32 22 32 8"
                    />
                    <animate
                      attributeName="points"
                      begin="indefinite"
                      calcMode="spline"
                      dur="50ms"
                      fill="freeze"
                      from="16 5 8 13 8 31 14 31 14 36 19 31 23 31 35 19 35 5"
                      keySplines="0.25 0.1 0.25 1"
                      keyTimes="0; 1"
                      to="13 8 8 13 8 31 14 31 14 36 19 31 23 31 32 22 32 8"
                    />
                    <animate
                      attributeName="points"
                      begin="indefinite"
                      calcMode="spline"
                      dur="75ms"
                      fill="freeze"
                      from="13 8 8 13 8 31 14 31 14 36 19 31 23 31 32 22 32 8"
                      keySplines="0.25 0.1 0.25 1"
                      keyTimes="0; 1"
                      to="16 5 8 13 8 31 14 31 14 36 19 31 23 31 35 19 35 5"
                    />
                  </polygon>
                </styled.polygon>
                <styled.polygon
                  points="26 25 30 21 30 10 14 10 14 25 18 25 18 29 22 25"
                >
                  <polygon
                    className="c4"
                    points="26 25 30 21 30 10 14 10 14 25 18 25 18 29 22 25"
                  >
                    <animateTransform
                      attributeName="transform"
                      begin="indefinite"
                      calcMode="spline"
                      dur="150ms"
                      fill="freeze"
                      from="0 0"
                      keySplines="0.25 0.1 0.25 1"
                      keyTimes="0; 1"
                      to="3 -3"
                      type="translate"
                    />
                    <animateTransform
                      attributeName="transform"
                      begin="indefinite"
                      calcMode="spline"
                      dur="250ms"
                      fill="freeze"
                      from="3 -3"
                      keySplines="0.25 0.1 0.25 1"
                      keyTimes="0; 1"
                      to="0 0"
                      type="translate"
                    />
                    <animateTransform
                      attributeName="transform"
                      begin="indefinite"
                      calcMode="spline"
                      dur="50ms"
                      fill="freeze"
                      from="3 -3"
                      keySplines="0.25 0.1 0.25 1"
                      keyTimes="0; 1"
                      to="0 0"
                      type="translate"
                    />
                    <animateTransform
                      attributeName="transform"
                      begin="indefinite"
                      calcMode="spline"
                      dur="75ms"
                      fill="freeze"
                      from="0 0"
                      keySplines="0.25 0.1 0.25 1"
                      keyTimes="0; 1"
                      to="3 -3"
                      type="translate"
                    />
                  </polygon>
                </styled.polygon>
                <styled.g
                  blinking={false}
                  onAnimationEnd={[Function]}
                >
                  <g
                    className="c5"
                    onAnimationEnd={[Function]}
                  >
                    <styled.polygon
                      as="path"
                      d="M20,14 L22,14 L22,20 L20,20 L20,14 Z M27,14 L27,20 L25,20 L25,14 L27,14 Z"
                    >
                      <path
                        className="c3"
                        d="M20,14 L22,14 L22,20 L20,20 L20,14 Z M27,14 L27,20 L25,20 L25,14 L27,14 Z"
                      >
                        <animateTransform
                          attributeName="transform"
                          begin="indefinite"
                          calcMode="spline"
                          dur="150ms"
                          fill="freeze"
                          from="0 0"
                          keySplines="0.25 0.1 0.25 1"
                          keyTimes="0; 1"
                          to="3 -3"
                          type="translate"
                        />
                        <animateTransform
                          attributeName="transform"
                          begin="indefinite"
                          calcMode="spline"
                          dur="250ms"
                          fill="freeze"
                          from="3 -3"
                          keySplines="0.25 0.1 0.25 1"
                          keyTimes="0; 1"
                          to="0 0"
                          type="translate"
                        />
                        <animateTransform
                          attributeName="transform"
                          begin="indefinite"
                          calcMode="spline"
                          dur="50ms"
                          fill="freeze"
                          from="3 -3"
                          keySplines="0.25 0.1 0.25 1"
                          keyTimes="0; 1"
                          to="0 0"
                          type="translate"
                        />
                        <animateTransform
                          attributeName="transform"
                          begin="indefinite"
                          calcMode="spline"
                          dur="75ms"
                          fill="freeze"
                          from="0 0"
                          keySplines="0.25 0.1 0.25 1"
                          keyTimes="0; 1"
                          to="3 -3"
                          type="translate"
                        />
                      </path>
                    </styled.polygon>
                  </g>
                </styled.g>
              </g>
            </svg>
          </styled.svg>
        </figure>
      </styled.figure>
    </div>
  </styled.div>
</AnimatedGlitchLogo>
`;

exports[`AnimatedGlitchLogo renders svg component with required props 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c2 {
  fill: currentColor;
}

.c3 {
  fill: #a970ff;
}

.c4 {
  fill: #ffffff;
}

.c5 {
  -webkit-animation-duration: 0.2s;
  animation-duration: 0.2s;
  -webkit-animation-iteration-count: 2;
  animation-iteration-count: 2;
  -webkit-animation-name: none;
  animation-name: none;
  -webkit-animation-play-state: paused;
  animation-play-state: paused;
  -webkit-transform-origin: 0% 35%;
  -ms-transform-origin: 0% 35%;
  transform-origin: 0% 35%;
  will-change: transform;
}

<AnimatedGlitchLogo>
  <styled.div
    className="tw-animated-glitch-logo"
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
  >
    <div
      className="c0 tw-animated-glitch-logo"
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
    >
      <styled.figure>
        <figure
          className="c1"
        >
          <styled.svg
            height="40px"
            overflow="visible"
            version="1.1"
            viewBox="0 0 40 40"
            width="40px"
            x="0px"
            y="0px"
          >
            <svg
              className="c2"
              height="40px"
              overflow="visible"
              version="1.1"
              viewBox="0 0 40 40"
              width="40px"
              x="0px"
              y="0px"
            >
              <g>
                <styled.polygon
                  points="13 8 8 13 8 31 14 31 14 36 19 31 23 31 32 22 32 8"
                >
                  <polygon
                    className="c3"
                    points="13 8 8 13 8 31 14 31 14 36 19 31 23 31 32 22 32 8"
                  >
                    <animate
                      attributeName="points"
                      begin="indefinite"
                      calcMode="spline"
                      dur="150ms"
                      fill="freeze"
                      from="13 8 8 13 8 31 14 31 14 36 19 31 23 31 32 22 32 8"
                      keySplines="0.25 0.1 0.25 1"
                      keyTimes="0; 1"
                      to="16 5 8 13 8 31 14 31 14 36 19 31 23 31 35 19 35 5"
                    />
                    <animate
                      attributeName="points"
                      begin="indefinite"
                      calcMode="spline"
                      dur="250ms"
                      fill="freeze"
                      from="16 5 8 13 8 31 14 31 14 36 19 31 23 31 35 19 35 5"
                      keySplines="0.25 0.1 0.25 1"
                      keyTimes="0; 1"
                      to="13 8 8 13 8 31 14 31 14 36 19 31 23 31 32 22 32 8"
                    />
                    <animate
                      attributeName="points"
                      begin="indefinite"
                      calcMode="spline"
                      dur="50ms"
                      fill="freeze"
                      from="16 5 8 13 8 31 14 31 14 36 19 31 23 31 35 19 35 5"
                      keySplines="0.25 0.1 0.25 1"
                      keyTimes="0; 1"
                      to="13 8 8 13 8 31 14 31 14 36 19 31 23 31 32 22 32 8"
                    />
                    <animate
                      attributeName="points"
                      begin="indefinite"
                      calcMode="spline"
                      dur="75ms"
                      fill="freeze"
                      from="13 8 8 13 8 31 14 31 14 36 19 31 23 31 32 22 32 8"
                      keySplines="0.25 0.1 0.25 1"
                      keyTimes="0; 1"
                      to="16 5 8 13 8 31 14 31 14 36 19 31 23 31 35 19 35 5"
                    />
                  </polygon>
                </styled.polygon>
                <styled.polygon
                  points="26 25 30 21 30 10 14 10 14 25 18 25 18 29 22 25"
                >
                  <polygon
                    className="c4"
                    points="26 25 30 21 30 10 14 10 14 25 18 25 18 29 22 25"
                  >
                    <animateTransform
                      attributeName="transform"
                      begin="indefinite"
                      calcMode="spline"
                      dur="150ms"
                      fill="freeze"
                      from="0 0"
                      keySplines="0.25 0.1 0.25 1"
                      keyTimes="0; 1"
                      to="3 -3"
                      type="translate"
                    />
                    <animateTransform
                      attributeName="transform"
                      begin="indefinite"
                      calcMode="spline"
                      dur="250ms"
                      fill="freeze"
                      from="3 -3"
                      keySplines="0.25 0.1 0.25 1"
                      keyTimes="0; 1"
                      to="0 0"
                      type="translate"
                    />
                    <animateTransform
                      attributeName="transform"
                      begin="indefinite"
                      calcMode="spline"
                      dur="50ms"
                      fill="freeze"
                      from="3 -3"
                      keySplines="0.25 0.1 0.25 1"
                      keyTimes="0; 1"
                      to="0 0"
                      type="translate"
                    />
                    <animateTransform
                      attributeName="transform"
                      begin="indefinite"
                      calcMode="spline"
                      dur="75ms"
                      fill="freeze"
                      from="0 0"
                      keySplines="0.25 0.1 0.25 1"
                      keyTimes="0; 1"
                      to="3 -3"
                      type="translate"
                    />
                  </polygon>
                </styled.polygon>
                <styled.g
                  blinking={false}
                  onAnimationEnd={[Function]}
                >
                  <g
                    className="c5"
                    onAnimationEnd={[Function]}
                  >
                    <styled.polygon
                      as="path"
                      d="M20,14 L22,14 L22,20 L20,20 L20,14 Z M27,14 L27,20 L25,20 L25,14 L27,14 Z"
                    >
                      <path
                        className="c3"
                        d="M20,14 L22,14 L22,20 L20,20 L20,14 Z M27,14 L27,20 L25,20 L25,14 L27,14 Z"
                      >
                        <animateTransform
                          attributeName="transform"
                          begin="indefinite"
                          calcMode="spline"
                          dur="150ms"
                          fill="freeze"
                          from="0 0"
                          keySplines="0.25 0.1 0.25 1"
                          keyTimes="0; 1"
                          to="3 -3"
                          type="translate"
                        />
                        <animateTransform
                          attributeName="transform"
                          begin="indefinite"
                          calcMode="spline"
                          dur="250ms"
                          fill="freeze"
                          from="3 -3"
                          keySplines="0.25 0.1 0.25 1"
                          keyTimes="0; 1"
                          to="0 0"
                          type="translate"
                        />
                        <animateTransform
                          attributeName="transform"
                          begin="indefinite"
                          calcMode="spline"
                          dur="50ms"
                          fill="freeze"
                          from="3 -3"
                          keySplines="0.25 0.1 0.25 1"
                          keyTimes="0; 1"
                          to="0 0"
                          type="translate"
                        />
                        <animateTransform
                          attributeName="transform"
                          begin="indefinite"
                          calcMode="spline"
                          dur="75ms"
                          fill="freeze"
                          from="0 0"
                          keySplines="0.25 0.1 0.25 1"
                          keyTimes="0; 1"
                          to="3 -3"
                          type="translate"
                        />
                      </path>
                    </styled.polygon>
                  </g>
                </styled.g>
              </g>
            </svg>
          </styled.svg>
        </figure>
      </styled.figure>
    </div>
  </styled.div>
</AnimatedGlitchLogo>
`;
